src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Reporter_State_Picklist__c</fullName>
        <label>Reporter State</label>
        <picklist>
            <picklistValues>
                <fullName>AL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KY</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ME</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NJ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporter_State__c</fullName>
        <label>Reporter State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Street__c</fullName>
        <label>Reporter Street</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter_Zip_Code__c</fullName>
        <label>Reporter Zip Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporter__c</fullName>
        <label>Reporter</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Requested_Action__c</fullName>
        <label>Requested Action</label>
        <picklist>
            <picklistValues>
                <fullName>Coupon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None, consumer satisfied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Further Information</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pending Receipt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Response_To_Inquiry__c</fullName>
        <label>Response To Inquiry</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Results_Consumer_SatisfiedExplanation__c</fullName>
        <label>Results_Consumer_SatisfiedExplanation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Results_Consumer_Satisfied__c</fullName>
        <label>Results Consumer Satisfied</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Results_Key_Points__c</fullName>
        <label>Results_Key_Points</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Return_Reason__c</fullName>
        <label>Return Reason</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Return__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Return?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reviewer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reviewer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Route_of_Administration__c</fullName>
        <label>Route of Administration</label>
        <picklist>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oral</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Topical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_CA_Time__c</fullName>
        <label>SFDC CA Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SFDC_Case_Assignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SFDC Case Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_as_Consumer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Consumer?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Same_as_Reporter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Same as Reporter?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_UPS_Call_Tag__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you need a UPS Call Tag sent to a customer</inlineHelpText>
        <label>Send UPS Call Tag?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_to_Supervisor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send to Supervisor?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sent_to_PQM_Date__c</fullName>
        <description>Date/Time that case was first successfully sent to PQM</description>
        <label>Sent to PQM Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sent_to_PQM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sent to PQM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Serious_Adverse_Event_Status__c</fullName>
        <label>Serious Adverse Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <picklist>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Standard_Response__c</fullName>
        <label>Standard Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Subcategory__c</fullName>
        <label>Subcategory</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Comments__c</fullName>
        <label>Investigation for Consumer Response</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Questions__c</fullName>
        <label>Tech Questions?</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Tech_Response__c</fullName>
        <label>Tech Response</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Test_Results__c</fullName>
        <label>Test Results?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Time_From_Assigned_to_Closed__c</fullName>
        <formula>(ClosedDate-SFDC_CA_Time__c)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time From Assigned to Closed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_Till_Assigned__c</fullName>
        <formula>(SFDC_CA_Time__c - CreatedDate)*1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time Till Assigned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Refund_Amount__c</fullName>
        <label>Total Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Treatment_for_Event__c</fullName>
        <label>Treatment for Event</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Unidentified_Product_Description__c</fullName>
        <label>Unidentified Product Description</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unidentified_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unidentified Product?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Was_product_taken_with_food_or_beverage__c</fullName>
        <label>Was product taken with food or beverage?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_receipt_included__c</fullName>
        <label>Was receipt included?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Was_the_product_restarted__c</fullName>
        <label>Was the product restarted?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_CA_Contact_Type__c</fullName>
        <label>Web Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_CA_First_Name__c</fullName>
        <label>First Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CA_Job_Title__c</fullName>
        <label>Web Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CA_Last_Name__c</fullName>
        <label>Last Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CA_Lot_Code__c</fullName>
        <label>Web Lot Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CA_Product_Name__c</fullName>
        <label>Web Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CA_Product_Number__c</fullName>
        <label>Web Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_CA_UPC__c</fullName>
        <label>Web UPC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Contact_Type__c</fullName>
        <label>Web Contact Type</label>
        <picklist>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retailer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Form_Comments__c</fullName>
        <description>This is the &quot;Comments&quot; value from the Web Form.</description>
        <label>Web Form Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Web_Form_Email__c</fullName>
        <description>This is the &quot;Email&quot; value from the Web Form.</description>
        <label>Web Form Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Web_Form_First_Name__c</fullName>
        <description>This is the &quot;First Name&quot; value from the Web Form.</description>
        <label>Web Form First Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Last_Name__c</fullName>
        <description>This is the &quot;Last Name Name&quot; value from the Web Form.</description>
        <label>Web Form Last Name</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Subject_Formula__c</fullName>
        <formula>IF (
ISPICKVAL (Brand__c, &quot;Puritan&apos;s Pride&quot;), 
CASE(Web_Form_Subject__c, &apos;2&apos;, &quot;Questions about our Products&quot;, &apos;3&apos;, &quot;Inquire about Current Order&quot;, &apos;4&apos;, &quot;Technical Difficulties Placing Order&quot;, &apos;5&apos;, &quot;Business/Affiliate Inquiries&quot;, &apos;6&apos;, &quot;Comments about our Web Site&quot;, &apos;7&apos;, &quot;Site Feedback&quot;, &apos;8&apos;, &quot;Broken Links&quot;, &apos;9&apos;, &quot;Problems Finding a Product&quot;, &apos;there are no matches&apos;),

IF(ISPICKVAL (Brand__c, &quot;Vitamin World&quot;), CASE(Web_Form_Subject__c, &apos;2&apos;, &quot;Questions about our Products&quot;, &apos;3&apos;, &quot;Inquire about Current Order&quot;, &apos;4&apos;, &quot;Technical Difficulties Placing Order&quot;, &apos;5&apos;, &quot;Business/Affiliate Inquiries&quot;, &apos;6&apos;, &quot;Comments about our new re-designed Web Site&quot;, &apos;7&apos;, &quot;Broken Links&quot;, &apos;8&apos;, &quot;Problems Finding a Product&quot;, &apos;9&apos;, &quot;Savings Passport Program Inquiries&quot;, &apos;there are no matches&apos;),&apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Web Form Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Form_Subject__c</fullName>
        <description>This is the &quot;Subject&quot; numerical value passed from the Web Form.</description>
        <label>Web Form Subject Num</label>
        <picklist>
            <controllingField>Origin</controllingField>
            <picklistValues>
                <fullName>Questions about our Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inquire about Current Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technical Difficulties Placing Order</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business/Affiliate Inquiries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comments about our Web Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Site Feedback</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broken Links</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problems Finding a Product</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Job_Title__c</fullName>
        <label>Web Job Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Lot_Code__c</fullName>
        <label>Web Lot Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Product_Location__c</fullName>
        <label>Web Product Location</label>
        <picklist>
            <picklistValues>
                <fullName>In Consumers Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Retailer Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Product_Name__c</fullName>
        <label>Web Product Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Product_Number__c</fullName>
        <label>Web Product Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_Production_Location__c</fullName>
        <label>Web Product Location</label>
        <picklist>
            <picklistValues>
                <fullName>In Consumer&apos;s Possession</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Retail Store</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Headquarters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Web_Retailer_Name__c</fullName>
        <label>Web Retailer Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Web_UPC__c</fullName>
        <label>Web UPC</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Weight__c</fullName>
        <label>Weight</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Were_lab_or_diagnostic_tests_performed__c</fullName>
        <label>Were lab or diagnostic tests performed?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>What_tests_were_performed__c</fullName>
        <label>What tests were performed?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_was_product_taken_with__c</fullName>
        <label>What was product taken with?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_was_the_result_of_discontinuing__c</fullName>
        <label>What was the result of discontinuing?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>What_was_the_result_of_restarting__c</fullName>
        <label>What was the result of restarting?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>When_was_the_product_taken__c</fullName>
        <label>When was the product taken?</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Where__c</fullName>
        <label>Where?</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>if_no_why_is_there_no_consumer_response__c</fullName>
        <label>If yes, please explain</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <listViews>
        <fullName>Admin_Support</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Original_From__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <filterScope>Queue</filterScope>
        <label>Admin - Support</label>
        <queue>Admin_Support</queue>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_My_Customer_Responded_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Reason__c</columns>
        <columns>Complaint_Type__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>Customer Responded</value>
        </filters>
        <label>*All My Customer Responded Cases</label>
    </listViews>
    <listViews>
        <fullName>BO_Nature_s_Origin_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Reason__c</columns>
        <columns>Case_Sub_Reason__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>BO - Nature&apos;s Origin - Case</label>
        <queue>BO_Natures_Origin_Case</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_Perfectly_Pure_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Reason__c</columns>
        <columns>Case_Sub_Reason__c</columns>
        <columns>Case_Resolution__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>BO - Perfectly Pure - Case</label>
        <queue>BO_Perfectly_Pure_Case</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_Puritan_s_Pride_E2C</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Original_To__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Puritan&apos;s Pride - E2C</label>
        <queue>BO_Puritan_s_Pride_E2C</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>E_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_Puritan_s_Pride_Phone</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Reason__c</columns>
        <columns>Case_Sub_Reason__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>BO - Puritan&apos;s Pride - Case</label>
        <queue>BO_Puritan_s_Pride_Phone</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_Puritan_s_Pride_W2C</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Web_Form_Subject_Formula__c</columns>
        <columns>Web_Form_Comments__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Puritan&apos;s Pride - W2C</label>
        <queue>BO_Puritan_s_Pride_W2C</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>E_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_Vitamin_World_E2C</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Original_To__c</columns>
        <columns>Original_From__c</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Vitamin World - E2C</label>
        <queue>BO_Vitamin_World_E2C</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>E_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_Vitamin_World_Phone</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Reason__c</columns>
        <columns>Case_Sub_Reason__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>BO - Vitamin World - Case</label>
        <queue>BO_Vitamin_World_Phone</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>BO_Vitamin_World_W2C</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Web_Form_Subject_Formula__c</columns>
        <columns>Web_Form_Comments__c</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>Vitamin World - W2C</label>
        <queue>BO_Vitamin_World_W2C</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>E_Support</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_Coaching</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CASES.RECORDTYPE</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.STATUS</columns>
        <columns>Case_Reason__c</columns>
        <columns>Complaint_Type__c</columns>
        <columns>CASES.CREATED_DATE</columns>
        <filterScope>Queue</filterScope>
        <label>Case Coaching</label>
        <queue>Case_Coaching</queue>
        <sharedTo>
            <group>Administrators</group>
            <group>Back_Office</group>
            <group>Supervisors</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Case_for_Cancelled_Orders</fullName>
        <filterScope>Queue</filterScope>
        <label>Case for Cancelled Orders</label>
        <queue>Case_for_Cancelled_Orders</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Affairs_E2C</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Brand__c</columns>
        <columns>Original_To__c</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>Rejected__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>Consumer Affairs - E2C</label>
        <queue>Consumer_Affairs_E2C</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
            <group>Consumer_Affairs</group>
            <group>Consumer_Affairs_Management</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Affairs_E2C_info_nb</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>Original_To__c</columns>
        <columns>CASES.SUBJECT</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>Original_To__c</field>
            <operation>equals</operation>
            <value>info@naturesbounty.com</value>
        </filters>
        <label>Consumer Affairs - E2C - info@nb</label>
        <queue>Consumer_Affairs_E2C</queue>
        <sharedTo>
            <group>Administrators</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consumer_Affairs_Escalated_for_QA</fullName>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.STATUS</columns>
        <columns>Complaint_Type__c</columns>
        <columns>Reporter_Name_del__c</columns>
        <columns>Consumer_Country__c</columns>
        <columns>Brand__c</columns>
        <columns>Category__c</columns>
        <columns>Subcategory__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Queue</filterScope>
        <label>Consumer Affairs - Escalated for QA</label>
        <queue>Consumer_Affairs_Escalated_for_QA</queue>
        <sharedTo>
            <group>Consumer_Affairs_Management</group>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>CA_Web_Case</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <label>CA Web Case</label>
    </recordTypes>
    <recordTypes>
        <fullName>Case_Read_Only</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>Cases that are 12 months or older are not editable and all fields are set to read-only</description>
        <label>Case Read Only</label>
    </recordTypes>
    <recordTypes>
        <fullName>Follow_Up</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>This record type will be used for all general follow-up cases.</description>
        <label>Follow-Up</label>
    </recordTypes>
    <recordTypes>
        <fullName>Pre_Case</fullName>
        <active>true</active>
        <businessProcess>General Support Process</businessProcess>
        <description>This record type will be used for pre-cases.</description>
        <label>Pre-Case</label>
    </recordTypes>
</CustomObject>